Bild des Versuchsaufbaus hinzugefügt. Leerzeichen aus Dateinamen von Bildern entfernt, die Probleme bei der Darstellung der Bilder machten

--- a/versuch_2/ergebnisse.tex
+++ b/versuch_2/ergebnisse.tex
@@ -201,14 +201,16 @@ t in s & dN/dt in 1/10s \\
 \end{table}
 
 \begin{figure}
-        \includegraphics[width=.9\textwidth]{images/dNdt(t).png}
+\centering
+        \includegraphics[width=.8\textwidth]{images/dNdt(t).png}
 \caption{Anzahl der innerhalb von 10s druchgelaufenen Ringe in Abhängigkeit der Zeit}
 \label{dNdt(t)}
 \end{figure}
 
 
 \begin{figure}
-	\includegraphics[width=.9\textwidth]{images/T(t).png}
+\centering
+	\includegraphics[width=.8\textwidth]{images/T(t).png}
 \label{plot:Tt}
 \caption{Temperatur in Abhängigkeit der Zeit}
 \end{figure}
@@ -326,7 +328,8 @@ An Tabelle \ref{tbl_3} fällt sofort auf, dass der Fehler in Fraktion 13 Null is
 
 
 \begin{figure}
-        \includegraphics[width=.9\textwidth]{images/dNdt(t)MWmitaltenWerten.png}
+\centering
+        \includegraphics[width=.8\textwidth]{images/dNdt(t)MWmitaltenWerten.png}
 \caption{Einteilung in Fraktionen}
 \label{dNdt(t)MWmitaltenWerten}
 \end{figure}
@@ -386,6 +389,7 @@ Mittlere Temperatur in $^{\circ}C$ &$ \alpha $ in $ 10^{-5}\frac {1}{^{\circ}C} 
 \end{table}
 
 \begin{figure}
+\centering
         \includegraphics[width=.8\textwidth]{images/alpha(T).png}
 \caption{Wärmeausdehnungskoeffizient in Abhängigkeit der Temperatur}
 \label{alpha(T)}
@@ -433,7 +437,8 @@ $\\
 
 
 \begin{figure}
-        \includegraphics[width=.8\textwidth]{images/Fit dNdt(t).png}
+\centering
+        \includegraphics[width=.8\textwidth]{images/Fit_dNdt(t).png}
 \caption{Fit von dN/dt}
 \label{Fit dNdt(t)}
 \end{figure}
@@ -449,7 +454,8 @@ $c=(19,91 \pm 0,042)^{\circ}C$ \\
 
 
 \begin{figure}
-        \includegraphics[width=.8\textwidth]{images/Fit T(t).png}
+\centering
+        \includegraphics[width=.8\textwidth]{images/Fit_T(t).png}
 \caption{Fit von T(t)}
 \label{Fit T(t)}
 \end{figure}
@@ -480,7 +486,8 @@ Dann ergibt sich folgender Graph:
 
 
 \begin{figure}
-        \includegraphics[width=.9\textwidth]{images/alpha(T)mitFit.png}
+\centering
+        \includegraphics[width=.8\textwidth]{images/alpha(T)mitFit.png}
 \caption{Vergleich zwischen Methode 1 und 2}
 \label{alpha(T)mitFit}
 \end{figure}
