--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -163,3 +163,7 @@ Im hier durchgeführten Experiment soll die Erwärmung eines Metallstabes von et
 \end{equation}
 
 Als Lösung einer derartigen Differentialgleichung ergibt sich bekanntlich eine e-Funktion $k \cdot e^{\alpha \cdot t}$, auf die Bestimmung der Koeffizienten $k$ und $\alpha$ soll hier nicht weiter eingegangen werden. 
+
+\subsection{Leidenfrost-Effekt}
+Der Leidenfrost-Effekt beschreibt ursprünglich das Verhalten von Wassertropfen auf heißen Herdplatten. Wird ein Wassertropfen auf eine heiße Platte gegeben, verdampft die untere Oberfläche des Tropfens sehr schnell und bildet eine Schicht aus Wasserdampf, die den restlichen Tropfen vor weiterer Wärmeübertragung isoliert. Dadurch kann der Tropfen für längere Zeit auf der heißen Herdplatte gleiten, ohne zu verdampfen.
+Ein ähnlicher Effekt entsteht, wenn Metall in flüssigen Stickstoff getaucht wird. Der Stickstoff rund um das Metall verdampft sehr schnell und bildet eine isolierende Schicht, was das Abkühlen des Metalls erschwert.
