--- a/versuch_2/durchfuehrung.tex
+++ b/versuch_2/durchfuehrung.tex
@@ -2,7 +2,11 @@
 
 Das Interferometer wurde auf einem schwingungsgedämpften optischen Tisch aufgebaut, als Lichtquelle wurde ein HeNe-Laser mit Wellenlänge $\lambda=633 nm$ verwendet. Der Lichtstrahl wurde durch einen Teleskopaufbau, bestehend aus einer Zerstreuungslinse mit Brennpunkt $f=-30.0 mm$ und einer Sammellinse mit Brennpunkt $f=200.0 mm$, die im Abstand von 17 cm zueinander aufgestellt wurden, aufgeweitet. Durch den Teleskopaufbau wird der Strahl zunächst aufgeweitet und dann wieder zu einem Parallelstrahl zusammengeführt. Dies ist notwendig, da eine zu starke Aufweitung bzw. Divergenz des Strahls eine Messung oder Zählung unmöglich machen würde, da der Kontrast des Interferenzbildes dadurch zu gering wäre. Nach dem Teleskopaufbau wurde der Strahl zunächst über zwei Spiegel parallel zur Tischebene ausgerichtet und dann in den halbdurchlässigen Spiegel geleitet. Der transmittierte Anteil des Strahls traf auf einen fest montierten Spiegel, der reflektierte Anteil traf auf einen auf einer Schiene beweglich montierten Spiegel. Hinter dem beweglichen Spiegel wurde der Edelstahlstab (Werkstoffnummer 1.4301), dessen Länge zu $l=28.9\pm0.1 cm$ gemessen wurde, eingespannt. In den Stab wurde ein kleines Loch gebohrt, sodass ein Temperaturfühler die Kerntemperatur des Stabes messen konnte. Der Temperaturfühler wurde an ein Sensor-CASSY 2 angeschlossen und die Messwerte über CASSYLab ausgelesen. Das entstehende Interferenzmuster wurde schließlich noch durch eine Zerstreuungslinse mit Brennpunkt $f=-100.0 mm$ aufgeweitet, um es besser sichtbar zu machen und auf eine Wand abgebildet.
 
-hier müssten noch ein foto vom versuchsaufbau und ein foto von den laserstrahlen rein
+\begin{figure}
+\centering
+	\includegraphics[width=.4\textwidth]{images/versuchsaufbau.jpg}
+	\caption{Fotografie des Versuchsaufbau nach Zeichnung in Abb. \ref{pic:skizze_versuchsaufbau}}
+\end{figure}
 
 \begin{landscape}
 \begin{figure}
