--- a/besprechungsprotokolle/131210protokoll.tex
+++ b/besprechungsprotokolle/131210protokoll.tex
@@ -46,17 +46,15 @@
 \newcommand{\C}{\mathbb{C}}
 \begin{document}
 
-\title{Besprechungs-Protokoll Gruppentreffen PPG8-1}
+\title{Besprechungs-Protokoll Gruppentreffen PPG8-9}
 \date{10. Dezember 2013}
 \maketitle
 
 \paragraph*{Anwesende}
-Leon Brückner,
 Udo Beier,
+Leon Brückner,
+Valentin Olpp,
 Sebastian Ziegler,
-Marco Zech,
-Valentin Olpp
-\paragraph*{Betreuer}
 Domenico Tiziani
 
 
