Besprechungsprotokoll zum 3.12 eingefügt

--- a/besprechungsprotokolle/131203Protokoll.tex
+++ b/besprechungsprotokolle/131203Protokoll.tex
@@ -31,8 +31,8 @@
 
 
 \begin{document}
-\title{6. Besprechungsprotokoll PPG8}
-\date{19.11.2013}
+\title{8. Besprechungsprotokoll PPG8}
+\date{03.12.2013}
 \maketitle
 
 \paragraph{Anwesende:}
@@ -41,23 +41,22 @@ Udo Beier, Leon Br"uckner, Valentin Olpp, Marco Zech, Sebastian Ziegler, Domenic
 
 \section{Status des Projekts}
 
-\subsection{Momentaner Status}
-Der Versuchsaufbau ist fast komplett, beim Bewegen des Verfahrtischs sind schon Schwingungen auf dem Oszilloskop zu erkennen, ein klares Problem sind aber noch die sehr geringen Ausschläge und das starke Rauschen.
+\subsection{Momentaner Status 2. Versuch}
+Messung des Interferometers ist abgeschlossen. Das Protokoll wurde angefangen. Das Protokoll wird am 09.12 an den Tutor geschickt.
 
-\subsection{Weiteres Vorgehen}
-Ein Gespräch mit Herrn Sondermann hat ergeben, dass die geringen Ausschl"age vor allem in der sehr starken Aufweitung des Strahls begr"undet sind. Ein neuer Aufbau, der eine Art 'Teleskop' zum Aufweiten des Strahls beinhaltet, soll h"oheren Kontrast und damit bessere Messergebnisse liefern.
-In dieser Woche soll also der Aufbau des Interferometers verbessert werden sowie die eigentliche Messung, die Längenänderung eines Metallstabs mit der Temperatur, aufgebaut und durchgeführt werden.
+\subsection{Weiteres Vorgehen 3. Versuch}
+Einigung auf den Bau eines Doppelpendels. Doppel Pendel soll aus Acryll im FabLab der FAU hergestellt werden. Messung der Bewegung soll mit einer Kamera durchgeführt werden. Die Massen sollen mit LEDs markiert werden um sie besser mit der Kamera erkennen zu können. Eine stabile Aufhängung muss während der Woche gefunden und gebaut werden.
 
 \subsection{Arbeitsaufteilung}
-Udo Beier: Aufbau und Justierung der neuen Versuchsanordnung
+Udo Beier: Schreiben der Auswertung des Protokolls zu Versuch 2
 \\
-Leon Br"uckner: Aufbau der Messung f"ur die L"angen"anderung, Besorgung von fl"ussigem Stickstoff zur Kühlung des Stabs
+Leon Br"uckner: Schreiben der Theorie des Protokolls zu Versuch 2
 \\
-Valentin Olpp: Aufbau und Justierung der neuen Versuchsanordnung
+Valentin Olpp: Letzte Korrekturen am Protokoll zu Versuch 1 umsetzten, herstellen der Pendelbauteile und LED Schaltungen zu Versuch 3
 \\
-Marco Zech: Aufbau und Inbetriebnahme des CASSY-Systems
+Marco Zech: Besorgung der benötigten Metallteile und Vorbereitung der theoretischen Betrachtung von Versuch 3
 \\
-Sebastian Ziegler: Justierung der neuen Versuchsanordnung, Schreiben des Theorieteils f"ur das Protokoll
+Sebastian Ziegler: Beschreibung der Versuchsdurchführung von Versuch 2 für das Protokoll
 
 
 \end{document}
