--- a/versuch_2/literature.bib
+++ b/versuch_2/literature.bib
@@ -17,3 +17,11 @@ Wärmeübertragung}
   year={2013}
   publisher={LD DIDACTIC GmbH}
 }
+
+@book{feynman2011feynman,
+  title={The Feynman Lectures on Physics, Vol. I: The New Millennium Edition: Mainly Mechanics, Radiation, and Heat},
+  author={Feynman, Richard P and Leighton, Robert B and Sands, Matthew},
+  volume={1},
+  year={2011},
+  publisher={Basic Books}
+}
