--- a/versuch_2/literature.bib
+++ b/versuch_2/literature.bib
@@ -19,9 +19,9 @@ Wärmeübertragung}
 }
 
 @book{feynman2011feynman,
-  title={The Feynman Lectures on Physics, Vol. I: The New Millennium Edition: Mainly Mechanics, Radiation, and Heat},
+  title={Feynman-Vorlesungen über Physik, Band 1: Mechanik, Strahlung, Wärme},
   author={Feynman, Richard P and Leighton, Robert B and Sands, Matthew},
-  volume={1},
-  year={2011},
-  publisher={Basic Books}
+  volume={5},
+  year={2007},
+  publisher={Oldenburg Verlag}
 }
