noch ne formel ergänzt und umgelabeled

--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -107,12 +107,15 @@ Ein $ \Delta N $ von 1 entspricht deswegen genau einer Längenänderung um $ \fr
 
 \begin{equation}
 \Delta l = \frac{\lambda}{2} \cdot \Delta N. 
-\label{form:ausd}
 \end{equation}
 
 
 wobei $ \lambda $ die Wellenlänge des verwendeten Lasers ist und N die Anzahl der während der Längenänderung durchlaufenen Intensitätsmaxima ist. 
-
+Durch zeitliches Ableiten ergibt sich:
+\begin{equation}
+\frac{dL}{dt} = \frac{\lambda}{2} \cdot \frac{dN}{dt}.
+\label{form:ausd}
+\end{equation}
 
 
 Weiterhin kann das vom Laser emittierte Strahlenbündel durch Einbringen von einer oder mehrerer Linsen zu einem 
