--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -114,7 +114,7 @@ wobei $ \lambda $ die Wellenlänge des verwendeten Lasers ist und N die Anzahl d
 Durch zeitliches Ableiten ergibt sich:
 \begin{equation}
 \frac{dL}{dt} = \frac{\lambda}{2} \cdot \frac{dN}{dt}.
-\label{form:ausd}
+\label{form:ausdzumax}
 \end{equation}
 
 
@@ -150,7 +150,7 @@ genau um ein Maximum und sind so für eine alternative \enquote{Zählung} der In
 Wird ein Material erhitzt, so dehnt es sich in den meisten Fällen aus. Dies kann im Standard-Atom-Modell für einen Feststoff veranschaulicht werden: Wird dem Stoff thermische Energie zugeführt, bedeutet dies effektiv eine Zunahme der kinetischen Energie der Atomrümpfe. Dadurch nimmt die Amplitude von deren Schwingung um die Ruhelage zu und es kommt effektiv zu einer \enquote{Streckung} des Materials in alle Raumrichtungen. Eine exakte Beschreibung ist tatsächlich deutlich komplizierter und erfordert die Verwendung von Quantenmechanik. Im Allgemeinen ergibt sich kein einfacher Verlauf für $ l(T) $, allerdings kann die Längenänderung für einen bestimmten Temperaturbereich durch einen linearen Verlauf angenähert werden 
 
 \begin{equation}
-\frac{ \Delta l}{l_{0}} = \alpha \cdot (T-T_{0}), 
+\frac{ \Delta l}{l_{0}} = \alpha(T) \cdot (T-T_{0}), 
 \label{formel:ausdehnung}
 \end{equation}
 
