noch mehr labels

--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -192,9 +192,15 @@ Im hier durchgeführten Experiment soll die Erwärmung eines Metallstabes von et
 
 \begin{equation}
 \frac{dQ}{dt} \sim  \frac{dT_M}{dt} \sim (T_{M} - T_{R}). 
+\lebel{form:konvektion1}
 \end{equation}
 
-Als Lösung einer derartigen Differentialgleichung ergibt sich eine e-Funktion $k \cdot e^{\alpha \cdot t}$, auf die Bestimmung der Koeffizienten $k$ und $\alpha$ soll hier nicht weiter eingegangen werden. 
+Als Lösung einer derartigen Differentialgleichung ergibt sich eine e-Funktion 
+\begin{equation}
+k \cdot e^{\alpha \cdot t}
+\label{form:konvektion2}
+\end{equation}
+, auf die Bestimmung der Koeffizienten $k$ und $\alpha$ soll hier nicht weiter eingegangen werden. 
 
 \subsection{Leidenfrost-Effekt}
 Der Leidenfrost-Effekt beschreibt ursprünglich das Verhalten von Wassertropfen auf heißen Herdplatten. Wird ein Wassertropfen auf eine heiße Platte gegeben, verdampft die untere Oberfläche des Tropfens sehr schnell und bildet eine Schicht aus Wasserdampf, die den restlichen Tropfen vor weiterer Wärmeübertragung isoliert. Dadurch kann der Tropfen für längere Zeit auf der heißen Herdplatte gleiten, ohne zu verdampfen.
