--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -107,6 +107,7 @@ Ein $ \Delta N $ von 1 entspricht deswegen genau einer Längenänderung um $ \fr
 
 \begin{equation}
 \Delta l = \frac{\lambda}{2} \cdot \Delta N. 
+\label{form:ausdzumax_1}
 \end{equation}
 
 
