--- a/versuch_2/ergebnisse.tex
+++ b/versuch_2/ergebnisse.tex
@@ -1,7 +1,7 @@
 \section{Darstellung der Ergebnisse und Auswertung}
 
 \subsection{Darstellung der Ergebnisse}
-Mit der oben beschriebenen Messmethode wurden folgende Werte gemessen:
+Mit der oben beschriebenen Messmethode wurden folgende Werte gemessen (\ref{tbl_1}):
 \begin{table}
 \centering
 \begin{tabular}{c|c}
@@ -215,29 +215,40 @@ t in s & dN/dt in 1/10s \\
 \caption{Temperatur in Abhängigkeit der Zeit}
 \end{figure}
 
-Beim Betrachten von Abb. \ref{dNdt(t)} fällt sofort auf, dass die Messwerte bei großen Werten von dN/dt wesentlich mehr streuen, was darauf zurückzuführen ist, dass das Zählen der Ringe bei größeren Werten von dN/dt mehr Schwierigkeiten bereitet hat.
+In Abb. \ref{dNdt(t)} wurde die Anzahl der in 10 Sekunden durchlaufenen Maxima über der Zeit aufgetragen. Der Verlauf
+ist bis etwa $ t = 2000 s$ annähernd linear, danach wird der Verlauf flacher und nähert sich der Zeit-Achse an. Die Größe
+$ \frac{dN}{dt} $ ist nach \ref{form:ausdzumax} proportional zur Geschwindigkeit der Längenänderung des Stabes. In diese
+Längenänderung fließt nach \ref{form:ausdehnung} ein im Allgemeinen temperaturabhängiges $ \alpha $ sowie der zeitliche 
+Verlauf der Temperaturkurve ein. Für den Temperaturverlauf ist nach \ref{form:konvektion2} ein exponentieller Abfall
+zu erwarten, aber das Verhalten von $ \alpha(T) $ ist nicht bekannt, sondern soll gerade mit diesem Versuch ermittelt werden. 
+Weiter fällt sofort auf, dass die Messwerte bei großen Werten von dN/dt wesentlich
+mehr streuen, was darauf zurückzuführen ist, dass das Zählen der Ringe bei größeren Werten von dN/dt mehr 
+Schwierigkeiten bereitet hat.
 Eine Tabelle der Temperatur des Stabes in Abhängigkeit der Zeit ist im Anhang zu finden. \\
 
 
 
 
 
-An der Temperaturkurve ist bei $ 0 ^{\circ} C $ ein kurzes Gleichbleiben der Temperatur zu beobachten. Dies ist darauf zurückzuführen, dass sich Eis um den Stab gebildet hat. Dieses schmilzt bei $ 0 ^{\circ} C $ und hält den Stab so kurzzeitig auf einer konstanten Temperatur.
+In \ref{plot:Tt} wird der Temperaturverlauf über der Zeit aufgetragen. Der Graph steigt zu Beginn sehr schnell und nähert
+sich dann der Raumtemperatur von etwa $ 20 ^{\circ} C $ an. Der Verlauf ähnelt sehr stark einer an der Zeitachse 
+gespiegelten und nach oben verschobenen Exponentialfunktion, wie es nach \ref{form:konvektion2} zu erwarten ist. 
+An der Temperaturkurve ist weiter bei $ 0 ^{\circ} C $ ein kurzes Gleichbleiben der Temperatur zu beobachten. Dies ist darauf zurückzuführen, dass sich Eis um den Stab gebildet hat. Dieses schmilzt bei $ 0 ^{\circ} C $ und hält den Stab so kurzzeitig auf einer konstanten Temperatur.
 
 \subsection{Auswertung}
 Aus den gemessenen Daten kann der Wärmeausdehnungskoeffizient $ \alpha $ des verwendeten Stabes in Abhängigkeit von der Temperatur bestimmt werden. Dafür werden in dieser Auswertung zwei verschiedene Methoden verwendet und anschließend miteinander verglichen.
 
 \subsubsection{Einteilung der Messwerte in Fraktionen}
-Bei dieser Methode werden die Messwerte möglichst gleichmäßig in Fraktionen eingeteilt und es wird jeweils innerhalb dieser der Mittelwert von dN/dt gebildet.\\(Die Mittelwertbildung ist aus mehreren Gründen gerechtfertigt: Zum Einen wird gerade ein gemittelter Wärmeausdehnungskoeffizient bestimmt. Zum anderen kann dN/dt in den Fraktionen als linear approximiert werden, wodurch sich Abweichungen vom Mittelwert durch die Linearität gegenseitig aufheben.) Außerdem werden aus den zu den Fraktionen passenden Zeitintervallen die entsprechenden Zeitdifferenzen errechnet. Aus den so bestimmten Größen kann dann für jede Fraktion ein mittlerer Wärmeausdehnungskoeffizient folgendermaßen ermittelt werden:
+Bei dieser Methode werden die Messwerte möglichst gleichmäßig in Fraktionen (\ref{tbl_2}) eingeteilt und es wird jeweils innerhalb dieser der Mittelwert von dN/dt gebildet.\\(Die Mittelwertbildung ist aus mehreren Gründen gerechtfertigt: Zum Einen wird gerade ein gemittelter Wärmeausdehnungskoeffizient bestimmt. Zum anderen kann dN/dt in den Fraktionen als linear approximiert werden, wodurch sich Abweichungen vom Mittelwert durch die Linearität gegenseitig aufheben.) Außerdem werden aus den zu den Fraktionen passenden Zeitintervallen die entsprechenden Zeitdifferenzen errechnet. Aus den so bestimmten Größen kann dann für jede Fraktion ein mittlerer Wärmeausdehnungskoeffizient nach \ref{formel:ausdehnung} folgendermaßen ermittelt werden:
 
 \begin{equation}
-\alpha(T)=\frac{\Delta L(T)}{L_{0}} \cdot \Delta T
+\alpha(T)=\frac{\Delta L(T)}{L_{0} \cdot \Delta T}
 \end{equation}
 
-Aus $ \Delta L = \frac{\lambda}{2} \cdot \Delta N $ folgt:
+Aus $ \Delta L = \frac{\lambda}{2} \cdot \Delta N $ (\ref{form:ausdzumax_1})folgt:
 
 \begin{equation}
-\alpha (T)= \frac{\lambda}{2} \cdot \frac{\Delta N(T)}{L_0} \cdot \Delta T
+\alpha (T)= \frac{\lambda}{2} \cdot \frac{\Delta N(T)}{L_0 \cdot \Delta T}
 \end{equation}
 
 \begin{table}
@@ -282,7 +293,7 @@ Fraktion&	Zeitintervalle in s	& $\Delta T $ in $ ^{\circ} C$ \\
 
 
 
-Innerhalb dieser Fraktionen ergeben sich folgende Mittelwerte mit zugehörigen Fehlern:
+Für die Mittelwerte von $dN/dt$ mit zugehörigen Fehlern ergeben sich die in Tabelle \ref{tbl_3} dargestellten Werte.
 
 \begin{table}
 \centering
@@ -324,7 +335,9 @@ Fraktion	&Mittelwert von dN/dt in 1/10s	&Fehler von dN/dt in 1/10s \\
 \end{table}
 
 
-An Tabelle \ref{tbl_3} fällt sofort auf, dass der Fehler in Fraktion 13 Null ist. Dies resultiert daraus, dass alle in dieser Fraktion zusammengefassten Werte gleich 5/10s sind.
+An Tabelle \ref{tbl_3} und deren graphischen Darstellung \ref{dNdt(t)MWmitaltenWerten} fällt sofort auf, dass 
+der Fehler in Fraktion 13 Null ist. Dies resultiert daraus, dass alle in dieser Fraktion zusammengefassten Werte 
+gleich 5/10s sind. 
 
 
 \begin{figure}
@@ -347,7 +360,21 @@ Die Fehlerfortpflanzung liefert:
 \end{equation}
 
 
-Es ergibt sich so:
+Damit ergitb sich für den temperaturabhängigen Wärmeausdehnungskoeffizient der in \ref{tbl_4} tabellarisch und in \ref{alpha(T)}
+graphisch dargestellte Verlauf. Es ist eindeutig zu erkennen, dass der Ausdehnungskoeffizient mit zunehmender Temperatur 
+im Bereich zwischen $ -120 $ und $ - 20 ^{\circ} C $ ebenfalls zunimmt. Es bietet sich hier ein linearer Verlauf an.
+Für den Bereich ab $ -20 ^{\circ} C $ ist es aufgrund der großen Fehler schwierig, den Verlauf zu interpretieren. Grund 
+dafür ist auch, dass die in einem zehnsekündigen Intervall gezählten Maxima sich im Bereich von etwa 5 bewegten. Da die
+Messung nicht notwendigerweise auf ein Maximum begonnen und beendet wurde, sondern zu von der Uhr vorgegebenen Zeitpunkten,
+ergibt sich hier eigentlich noch ein zusätzlicher Fehler, der für kleine $dN/dt$ relativ gesehen 
+zunehmend größer wird. \\
+Fittet man in \ref{alpha(T)} einen linearen Graphen, so ergibt sich die Näherung:
+\begin{equation}
+\alpha(T) = a \cdot T + b 
+\end{equation}
+mit $ a = (0,0182 \pm 0,003) \cdot 10^{-5} K^{-2} $ und $ b = (4,07 \pm 0,143) \cdot 10^{-5} K^{-1} $. Dabei wurde lediglich
+der von gnuplot ausgegebene Fehler aufgeführt, aber keine erneute Fehlerfortpflanzung mit Berücksichtigung der Fehler der einzelnen
+Mittelwerte durchgeführt. 
 
 \begin{table}
 \centering
