referenzen  vereinheitlicht, +kleinigkeiten

--- a/versuch_2/literature.bib
+++ b/versuch_2/literature.bib
@@ -1,12 +1,8 @@
-@article{praktikumwaerme
-,
+@article{praktikumwaerme,
 title = {Praktikum der Technischen Chemie
-Wärmeübertragung}
-,
-  url={www.uni-oldenburg.de/tchemie/Praktikum/Waermeuebertragung.pdf‎
-},
-  author={Prof. Dr. Axel Brehm
-},
+Wärmeübertragung},
+ url={www.uni-oldenburg.de/tchemie/Praktikum/Waermeuebertragung.pdf‎},
+  author={Prof. Dr. Axel Brehm},
   year={2009},
   publisher={Uni Oldenburg}
 }
