--- a/versuch_2/protokoll.tex
+++ b/versuch_2/protokoll.tex
@@ -13,9 +13,10 @@
 \input{theorie}
 \input{durchfuehrung}
 \input{ergebnisse}
+\input{anhang}
 \newpage
-\nocite{*}
+%\nocite{*}
 \bibliographystyle{natdin}
 \bibliography{literature.bib}
-\input{anhang}
+
 \end{document}
