--- a/versuch_2/anhang.tex
+++ b/versuch_2/anhang.tex
@@ -1,7 +1,7 @@
 \section{Anhang}
 \nopagebreak
-\begin{footnotesize}
 \begin{table}[h]
+\scriptsize
 \centering
 \begin{tabular}{rl}
 t in s & T in $^{\circ}C$\\
@@ -138,6 +138,6 @@ t in s & T in $^{\circ}C$\\
 2320	&	10,41\\
 2340	&	10,91\\
 \end{tabular}
+\normalsize
 \caption{Temperaturverlauf über die Zeit des Experiments}
 \end{table}
-\end{footnotesize}
