--- a/versuch_2/header.tex
+++ b/versuch_2/header.tex
@@ -50,7 +50,7 @@
 \usepackage{microtype}
 
 %Schaltbilder malen
-\usepackage[europeanresistors,cuteinductors,siunitx]{circuitikz}
+%\usepackage[europeanresistors,cuteinductors,siunitx]{circuitikz}
 
 \usepackage{csquotes}
 
