--- a/versuch_2/protokoll.tex
+++ b/versuch_2/protokoll.tex
@@ -14,8 +14,7 @@
 \input{durchfuehrung}
 \input{ergebnisse}
 \newpage
-\nocite{*}
-\bibliographystyle{natdin}
-\bibliography{literature.bib}
+%\bibliographystyle{natdin}
+%\bibliography{literature}
 \input{anhang}
 \end{document}
