--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -193,7 +193,7 @@ Im hier durchgeführten Experiment soll die Erwärmung eines Metallstabes von et
 
 \begin{equation}
 \frac{dQ}{dt} \sim  \frac{dT_M}{dt} \sim (T_{M} - T_{R}). 
-\lebel{form:konvektion1}
+\label{form:konvektion1}
 \end{equation}
 
 Als Lösung einer derartigen Differentialgleichung ergibt sich eine e-Funktion 
