--- a/versuch_2/header.tex
+++ b/versuch_2/header.tex
@@ -39,7 +39,7 @@
 % Interssante natbib Optionen: 
 % numbers : Nummerierte Zitateinheiten
 % sort&compress : Bei mehrfachen Zitaten, Sortierung und ggf. Verkürzungen
-\usepackage[]{natbib}
+%\usepackage[]{natbib}
 
 %Vectorpfeile schöner
 \usepackage{esvect}
