--- a/versuch_2/durchfuehrung.tex
+++ b/versuch_2/durchfuehrung.tex
@@ -4,7 +4,7 @@ Das Interferometer wurde auf einem schwingungsgedämpften optischen Tisch aufgeb
 
 \begin{figure}
 \centering
-	\includegraphics[width=.8\textwidth]{images/versuchsaufbau.jpg}
+	\includegraphics[width=\textwidth]{images/versuchsaufbau.jpg}
 	\caption{Fotografie des Versuchsaufbaus nach Zeichnung in Abb. \ref{pic:skizze_versuchsaufbau}}
 \end{figure}
 
