--- a/versuch_2/ergebnisse.tex
+++ b/versuch_2/ergebnisse.tex
@@ -516,7 +516,8 @@ Dann ergibt sich der Graph \aref{alpha(T)mitFit}
 \end{figure}
 
 
-Aus beiden Methoden lässt sich folgern, dass der mittlere Wärmeausdehnungkoeffizient des Stabs von der Temperatur abhängig ist.
+\subsubsection{Vergleich beider Methoden}
+Wie in \aref{alpha(T)mitFit} zu erkennen, führen beide Methoden zu ähnlichen Ergebnissen: Im Temperaturbereich zwischen $ -120 $ und $ -20 ^{\circ} C $ stimmt der Verlauf des Graphen gut mit den Messwerten überein. Der Graph verläuft hier durch zwei von sieben und berührt zwei weitere Fehlerbalken. Im Temperaturbereich zwischen $ -20 $ und $ 10 ^{\circ} C $ stimmt der Verlauf des Graphen nur bedingt mit den Messwerten überein, da beispielweise der Messwert bei $T = -9,3 ^{\circ} C $ weit vom durch Methode 2 erlangten Graphen entfernt ist. Dies liegt vor allem daran, dass in diesem Temperaturbereich der oben schon angesprochene und nicht eingezeichnete Fehler relativ groß ist, da hier nur geringe Maximumsdurchläufe pro zehn Sekunden gezählt werden konnten.
 
 \subsection{Fazit}
 
